added script to install java home

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,10 @@
 language: java
 sudo: true
-before_script:
-  - wget https://github.com/sormuras/bach/raw/master/install-jdk.sh
-
-jobs:
-  include:
-    - stage: job1
-      env: JDK=adoptopenjdk14+HotSpot
-      script:
-        - source ./install-jdk.sh --url 'https://api.adoptopenjdk.net/v3/binary/latest/14/ga/linux/x64/jdk/hotspot/normal/adoptopenjdk?project=jdk'
-        - JAVA_HOME=~/jdk && ./install-jdk.sh --target $JAVA_HOME && PATH=$JAVA_HOME/bin:$PATH
-        - JAVA_HOME=$(./install-jdk.sh --silent --emit-java-home)
-        - JAVA_HOME=$(./install-jdk.sh --emit-java-home | tail --lines 1)
-
+before_install:
+  - wget https://api.adoptopenjdk.net/v3/binary/latest/14/ga/linux/x64/jdk/hotspot/normal/adoptopenjdk?project=jdk
+  - tar xvzf OpenJDK14U-jdk_x64_linux_hotspot_14.0.2_12.tar.gz
+  - export JAVA_HOME=$PWD/jdk-14.0.2+12
+  - export PATH=$JAVA_HOME/bin:$PATH
 after_script:
   - echo JAVA_HOME = ${JAVA_HOME}
   - echo PATH = ${PATH}
