--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - tar xvzf ${TRAVIS_HOME}/OpenJDK14U-jdk_x64_linux_hotspot_14.0.2_12.tar.gz
   - export JAVA_HOME=${TRAVIS_HOME}/jdk-14.0.2+12
   - export PATH=$JAVA_HOME/bin:$PATH
-  - ls $JAVA_HOME
+  - ls ${JAVA_HOME}
   - java -version
   - javac -version
   - mvn -version
