--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,8 @@ sudo: true
 before_install:
   - wget "https://api.adoptopenjdk.net/v3/binary/latest/14/ga/linux/x64/jdk/hotspot/normal/adoptopenjdk?project=jdk" -O ${TRAVIS_HOME}/OpenJDK14U-jdk_x64_linux_hotspot_14.0.2_12.tar.gz
   - tar xvzf ${TRAVIS_HOME}/OpenJDK14U-jdk_x64_linux_hotspot_14.0.2_12.tar.gz
-  - export JAVA_HOME=${TRAVIS_HOME}/jdk-14.0.2+12
+  - export JAVA_HOME=/jdk-14.0.2+12
   - export PATH=$JAVA_HOME/bin:$PATH
-  - ls ${JAVA_HOME}
-  - java -version
-  - javac -version
-  - mvn -version
-  - env
-  - cd wrappers/java
-  - mvn clean
-  - mvn package
-  - cd ../..
 after_script:
   - echo JAVA_HOME = ${JAVA_HOME}
   - echo PATH = ${PATH}
