updated travis file to install cli

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: java
 services: docker
+sudo: true
 before_install:
   - wget "https://api.adoptopenjdk.net/v3/binary/latest/14/ga/linux/x64/jdk/hotspot/normal/adoptopenjdk?project=jdk" -O ${TRAVIS_HOME}/OpenJDK14U-jdk_x64_linux_hotspot_14.0.2_12.tar.gz
   - tar xvzf ${TRAVIS_HOME}/OpenJDK14U-jdk_x64_linux_hotspot_14.0.2_12.tar.gz
   - export JAVA_HOME=jdk-14.0.2+12
   - export PATH=$JAVA_HOME/bin:$PATH
-  - curl -L https://aka.ms/InstallAzureCli | bash
+  - curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
 after_success:
   - bash <(curl -s https://codecov.io/bash)
   - az --version
