--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,4 @@ after_success:
   - bash <(curl -s https://codecov.io/bash)
   - az --version
   - docker build -t url-shortner .
+  - docker images
