--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ after_success:
   - bash <(curl -s https://codecov.io/bash)
   - az --version
   - docker build -t url-shortner .
-  - docker login loginServer -u ${ACR_REGISTRY} -p ${ACR_REGISTRY_PWD}
+  - docker login ${ACR_REGISTRY} -u ${ACR_REGISTRY} -p ${ACR_REGISTRY_PWD}
   - docker tag latest ${ACR_REGISTRY}/sample/url-shortner
   - docker push ${ACR_REGISTRY}/sample/url-shortner
