updated travis yml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ after_success:
   - docker login ${ACR_REGISTRY} -u ${ACR_REGISTRY_USER} -p ${ACR_REGISTRY_PWD}
   - docker tag url-shortner ${ACR_REGISTRY}/sample/url-shortner
   - docker push ${ACR_REGISTRY}/sample/url-shortner
-  - az aks get-credentials --resource-group ${AZ_RES_GRP} --name ${AZ_CLSTR} kubectl apply -f kube/url-kube.yaml
+  - az aks get-credentials --resource-group ${AZ_RES_GRP} --name ${AZ_CLSTR} kubectl apply -f kube/url-kube.yml
