installing to kubernetes

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,4 @@ after_success:
   - docker tag url-shortner ${ACR_REGISTRY}/sample/url-shortner
   - docker push ${ACR_REGISTRY}/sample/url-shortner
   - az login --service-principal -u ${ACR_REGISTRY_USER} -p ${ACR_REGISTRY_PWD} --tenant ${TENANT_ID}
-  - az aks get-credentials --resource-group ${AZ_RES_GRP} --name ${AZ_CLSTR} --file kube/url-service-cube.yml
-  - az aks get-credentials --resource-group ${AZ_RES_GRP} --name ${AZ_CLSTR} --file kube/url-kube.yml
-
+  - az aks get-credentials --resource-group ${AZ_RES_GRP} --name ${AZ_CLSTR}
