--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ before_install:
   - export JAVA_HOME=jdk-14.0.2+12
   - export PATH=$JAVA_HOME/bin:$PATH
   - curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+  - cp kube/url-service-cube.yml /home/travis/.kube/config/url-service-cube.yml
+  - cp kube/url-service-cube.yml /home/travis/.kube/config/url-kube.yml
+
 after_success:
   - bash <(curl -s https://codecov.io/bash)
   - az --version
@@ -15,7 +18,6 @@ after_success:
   - docker tag url-shortner ${ACR_REGISTRY}/sample/url-shortner
   - docker push ${ACR_REGISTRY}/sample/url-shortner
   - az login --service-principal -u ${ACR_REGISTRY_USER} -p ${ACR_REGISTRY_PWD} --tenant ${TENANT_ID}
-  - az aks get-credentials --resource-group ${AZ_RES_GRP} --name ${AZ_CLSTR} --file kube/url-service-cube.yml
-  - az aks get-credentials --resource-group ${AZ_RES_GRP} --name ${AZ_CLSTR} --file kube/url-kube.yml
+  - az aks get-credentials --resource-group ${AZ_RES_GRP} --name ${AZ_CLSTR}
   - ls -ltr
 
