--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ after_success:
   - az login --service-principal -u ${ACR_REGISTRY_USER} -p ${ACR_REGISTRY_PWD} --tenant ${TENANT_ID}
   - az aks get-credentials --resource-group ${AZ_RES_GRP} --name ${AZ_CLSTR}
   - ls -ltr
-  - kubectl --kubeconfig=/home/travis/.kube/config apply --filename=kube\url-service-cube.yml
-  - kubectl --kubeconfig=/home/travis/.kube/config apply --filename=kube\url-kube.yml
+  - kubectl --kubeconfig=/home/travis/.kube/config apply --filename=kube/url-service-cube.yml
+  - kubectl --kubeconfig=/home/travis/.kube/config apply --filename=kube/url-kube.yml
